2004-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkscale.c: Added Gtk::Scale#layout, #layout_offsets for 
	GTK+-2.4.

2004-06-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdrag.c: Fix a bug of Gtk::Drag.dest_find_target.

2004-06-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmenu.c, rbgtkmenushell.c, rbgtkmessagedialog.c: 
	Fix a compilation error for GTK+-2.2 or earilier.
	Reported by Ryan Platte.

2004-06-16  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdk.c:
	* src/rbgdkatom.c:
	* src/rbgtkcontainer.c:
	* src/rbgtkeditable.c:
 	* src/rbgtkitemfactory.c:
	* src/rbgtkstock.c:
	* src/rbgtktextiter.c: 
	* src/rbgtktextmark.c:
	* src/rbgtkwidget.c: 
	Introduced CSTR2RVAL () and CSTR2RVAL2 () in some places that were still using
	rb_str_new2 ().

2004-06-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkradiotoolbutton.c: Added. 
	* src/rbgtktoolbar.c: Added Gtk::Toolbar#item_index, #n_item, #drop_index,
	#set_drop_highlight_item, #relief_style for GTK+-2.4.
	* src/rbgtkmenushell.c: Added Gtk::MenuShell#select_first for GTK+-2.2.
	Added Gtk::MenuShell#cancel for GTK+-2.4.
	* src/rbgtkmenu.c: Added Gtk::Menu#set_screen for GTK+-2.2.
	Added Gtk::Menu#attach, Gtk::Menu#set_monitor for Gtk+-2.4.
	* src/rbgtktreemodelfilter.c, sample/misc/treemodelfilter.rb: 
	Added for GTK+-2.4.

2004-06-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkcellrenderer.c: Added Gtk::CellRenderer#editing_canceled for GTK+-2.4. 
	* src/rbgtktreepath.c: Added Gtk::TreePath.new(index1, index2, ...) for GTK+-2.4.
	* src/rbgtktextbuffer.c: Added Gtk::TextBuffer#select_range for GTK+-2.4.

2004-06-03  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgtkdrag.c (Gtk::Drag.begin): Fixed a bug when decoding the
	first parameter.

2004-06-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktextiter.c: Added Gtk::TextIter# forward_visible_word_ends,
	#backward_visible_word_starts, #forward_visible_word_end, 
	#backword_visible_word_start, #forward_visible_cursor_position,